Modified mail route to return new message
